fix: Table foot height collapse when scroll.x is too small

--- a/components/Table/style/index.less
+++ b/components/Table/style/index.less
@@ -731,7 +731,7 @@
   // summary
   div&-tfoot {
     width: 100%;
-    overflow-x: auto;
+    overflow-x: scroll;
     background-color: @table-color-bg-tfoot;
     scrollbar-color: transparent transparent;
     position: relative;
